@@ -1,3 +1,7 @@
+2013-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix surviver reuse bug introduced yesterday
+
 2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* improve positioning: make parents and new siblings visible
